[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thumbrella-client"
version = "0.1.0"
description = "Lightweight Python client for the Thumbrella HTTP API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["thumbrella", "thumbnail", "image", "streaming", "api", "client"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only"
]
dependencies = [
  "requests>=2.31.0",
  "aiohttp>=3.9.0"
]

[tool.setuptools.packages.find]
where = ["src"]
