[project]
name = "thumbrella-client"
version = "0.4.0"
description = "Python client for the Thumbrella thumbnail API — typed results, async streaming, pluggable caching"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["thumbrella", "thumbnail", "thumbnails", "image", "media", "streaming"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://thumbrella.dev/docs/client"
Repository = "https://github.com/thumbrella-dev/thumbrella-clients"
Issues = "https://github.com/thumbrella-dev/thumbrella-clients/issues"
Documentation = "https://thumbrella.dev/docs"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

dependencies = [
  "requests>=2.31.0",
]

[project.optional-dependencies]
async = ["aiohttp>=3.9.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
thumbrella = ["*.jpg"]

