[package]
name = "thumbrella"
version = "0.1.0"
edition = "2021"
description = "Rust client for the Thumbrella HTTP API"
license = "Apache-2.0"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = []
blocking = ["reqwest/blocking", "tokio"]

[[example]]
name = "basic"
path = "examples/basic.rs"
