[package]
name = "thumbrella"
version = "0.3.0"
edition = "2021"
description = "Rust client for the Thumbrella thumbnail API — typed results, async streaming, pluggable caching"
license = "Apache-2.0"
repository = "https://github.com/thumbrella-dev/thumbrella-clients"
homepage = "https://thumbrella.dev/docs/client"
documentation = "https://docs.rs/thumbrella"
keywords = ["thumbrella", "thumbnail", "thumbnails", "image", "media", "streaming"]
categories = ["api-bindings", "multimedia::images", "web-programming::http-client"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = []
blocking = ["reqwest/blocking", "tokio"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "stream"
path = "examples/stream.rs"
